Updated RecyclerView, created onclick borders
- RecyclerView now ensures thread closure before rerunning
- Border onclick for RecyclerView implemented
- Start Game button only enables if there are 6 images selected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Memory Game</string>
     <string name="url_placeholder">URL</string>
     <string name="fetch_buttontext">Fetch</string>
+    <string name="start_buttontext">Start Game</string>
     <string name="back_buttontext">Back</string>
+    <string name="recyclerImageView">ImageView in RecyclerView</string>
 </resources>
