--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,16 @@
     <string name="fetch_buttontext">Fetch</string>
     <string name="start_buttontext">Start Game</string>
     <string name="back_buttontext">Back</string>
+    <string name="save_buttontext">Save Changes</string>
     <string name="recyclerImageView">ImageView in RecyclerView</string>
     <string name="action_settings">Settings</string>
+    <string name="fetch_settings">Fetch maximum items: </string>
+
+    <string-array name="fetch_choices">
+        <item>All</item>
+        <item>6</item>
+        <item>12</item>
+        <item>24</item>
+        <item>48</item>
+    </string-array>
 </resources>
