--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="start_buttontext">Start Game</string>
     <string name="back_buttontext">Back</string>
     <string name="save_buttontext">Save Changes</string>
+    <string name="default_buttontext">Restore Default</string>
     <string name="recyclerImageView">ImageView in RecyclerView</string>
     <string name="action_settings">Settings</string>
     <string name="fetch_settings">Fetch maximum items: </string>
+    <string name="grid_settings">Images per row: </string>
 
     <string-array name="fetch_choices">
         <item>All</item>
@@ -15,5 +17,12 @@
         <item>12</item>
         <item>24</item>
         <item>48</item>
+    </string-array>
+
+    <string-array name="grid_choices">
+        <item>3</item>
+        <item>1</item>
+        <item>2</item>
+        <item>4</item>
     </string-array>
 </resources>
