--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="back_buttontext">Back</string>
     <string name="save_buttontext">Save Changes</string>
     <string name="default_buttontext">Restore Default</string>
+    <string name="score">Score: 0</string>
     <string name="recyclerImageView">ImageView in RecyclerView</string>
     <string name="action_settings">Settings</string>
     <string name="fetch_settings">Fetch maximum items: </string>
