Added failure sound and QoL changes
- Autocomplete for URL with suggested URLs
- Fixed issue where onscreen keyboard messes up the grid layout
- Added textview that tells you to select 6 images
- Interrupts download when user goes to settings to prevent issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="action_settings">Settings</string>
     <string name="fetch_settings">Fetch maximum items: </string>
     <string name="grid_settings">Images per row: </string>
+    <string name="helptext">Please select 6 images</string>
 
     <string-array name="fetch_choices">
         <item>All</item>
@@ -25,5 +26,13 @@
         <item>1</item>
         <item>2</item>
         <item>4</item>
+    </string-array>
+
+    <string-array name="suggested_urls">
+        <item>https://freestocks.org</item>
+        <item>https://picography.co</item>
+        <item>https://stocksnap.io</item>
+        <item>https://www.gratisography.com/</item>
+        <item>https://www.reshot.com/</item>
     </string-array>
 </resources>
