--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Memory Game</string>
+    <string name="scrolling_text">Welcome to Memory Game! Please enter the website URL to choose pictures.</string>
     <string name="url_placeholder">URL</string>
     <string name="fetch_buttontext">Fetch</string>
     <string name="start_buttontext">Start Game</string>
@@ -14,6 +15,12 @@
     <string name="jsoup_settings">Enable Glide library: </string>
     <string name="glide_settings">Enable jsoup library: </string>
     <string name="helptext">Please select 6 images</string>
+
+    <string name="default_matches">0/6 matches</string>
+    <string name="default_time">00:00:00</string>
+    <string name="game_welcome">Welcome to the memory game!</string>
+    <string name="pause_buttontext">Pause</string>
+    <string name="paused_text">PAUSED</string>
 
     <string-array name="fetch_choices">
         <item>All</item>
